<resources>
    <string name="app_name">Погода</string>
    <string name="to_second_activity">К погоде</string>
    <string name="increase_counter">Increase counter</string>
    <string name="cityLabel">Город:  </string>
    <string name="cityName">Москва</string>

    <string name="tempLabel">Температура:  </string>
    <string name="overcastLabel">Облачность:  </string>
    <string name="humLabel">Влажность:  </string>
    <string name="pressureLabel">Давление:  </string>
    <string name="windLabel">Скорость ветра:  </string>

    <string name="checkBoxOvercast">Облачность</string>
    <string name="checkBoxHumidity">Влажность</string>
    <string name="checkBoxPressure">Давление</string>
    <string name="checkBoxWind">Скорость ветра</string>

    <string name="tempValue">21 \u2103</string>
    <string name="humValue">75%</string>
    <string name="pressureValue">760мм</string>
    <string name="windValue">5 &#8211; 7 м/с</string>

    <string name="cityLabel2">Город</string>
    <string name="cityHelp">Введите имя города</string>
</resources>
