<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toSecondActivityBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/to_second_activity"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cityLabel2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/cityHelp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxOvercast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxOvercast" />

    <CheckBox
        android:id="@+id/checkBoxHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxHumidity" />
    <CheckBox
        android:id="@+id/checkBoxPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxPressure" />
    <CheckBox
        android:id="@+id/checkBoxWind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxWind" />

</LinearLayout>